@@ -1,6 +1,6 @@
-FROM java:openjdk-8-jre-alpine
+FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.3_7
 
-ENV ESVERSION 6.1.2
+ENV ESVERSION 6.8.0
 ENV MESH_AUTH_KEYSTORE_PATH=/keystore/keystore.jks
 ENV MESH_GRAPH_BACKUP_DIRECTORY=/backups
 ENV MESH_GRAPH_DB_DIRECTORY=/graphdb
@@ -27,13 +27,13 @@ RUN mkdir -p /graphdb   && chown mesh: /graphdb    -R && \
     mkdir /config    && chown mesh: /config     -R && ln -s /config /mesh/config && \
     mkdir /mesh/data && chown mesh: /mesh/data  -R
 
-ADD https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-$ESVERSION.zip /es.zip
+ADD https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-oss-$ESVERSION.tar.gz /es.tar.gz
 
 WORKDIR /
-RUN apk --update --no-cache add unzip \
-    && unzip /es.zip && apk del unzip \
+RUN apk --update --no-cache add tar \
+    && tar xfz /es.tar.gz && apk del tar \
     && mv elasticsearch* elasticsearch \
-    && rm /es.zip \
+    && rm /es.tar.gz \
     && ln -s /elasticsearch /mesh/elasticsearch \
     && mkdir -p /elasticsearch/data \
     && chown mesh: /elasticsearch -R
